--- a/packages/request-bus/package.json
+++ b/packages/request-bus/package.json
@@ -1,11 +1,49 @@
 {
   "name": "request-bus",
   "version": "0.0.1",
-  "description": "",
-  "main": "./src/index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "请求库业务层 - 组装和暴露给应用的最终 API",
+  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "browser": "./dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "browser": "./dist/index.js",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
+    }
   },
+  "files": [
+    "dist",
+    "src"
+  ],
+  "sideEffects": false,
+  "scripts": {
+    "build": "tsc && tsc --module commonjs --moduleResolution node --outDir dist/cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module commonjs --moduleResolution node --outDir dist/cjs",
+    "dev": "tsc --watch",
+    "clean": "rimraf dist"
+  },
+  "dependencies": {
+    "request-core": "workspace:*",
+    "request-imp-axios": "workspace:*",
+    "request-imp-fetch": "workspace:*"
+  },
+  "devDependencies": {
+    "typescript": "~5.9.2",
+    "rimraf": "^5.0.0"
+  },
+  "keywords": [
+    "request",
+    "http",
+    "browser",
+    "business",
+    "typescript"
+  ],
   "author": "",
   "license": "ISC"
 }
