--- a/packages/request-imp-axios/package.json
+++ b/packages/request-imp-axios/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "request-imp-fetch",
+  "name": "request-imp-axios",
   "version": "0.0.1",
-  "description": "基于 Fetch API 的请求实现层",
+  "description": "基于 Axios 的请求实现层",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -29,6 +29,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "request-core": "workspace:*"
   },
   "devDependencies": {
@@ -36,7 +37,7 @@
     "rimraf": "^5.0.0"
   },
   "keywords": [
-    "fetch",
+    "axios",
     "http",
     "browser",
     "typescript"
