feat: 优化请求缓存功能

--- a/packages/request-core/package.json
+++ b/packages/request-core/package.json
@@ -29,8 +29,8 @@
     "clean": "rimraf dist"
   },
   "devDependencies": {
-    "typescript": "~5.9.2",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "typescript": "~5.9.2"
   },
   "keywords": [
     "request",
