test: 高性能缓存键生成器的单测

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "dev": "pnpm -r run dev",
     "clean": "pnpm -r run clean",
     "demo:browser": "vite serve apps/demo-browser --port 3000",
-    "install-deps": "pnpm install"
+    "install-deps": "pnpm install",
+    "test": "vitest"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
     "rimraf": "^5.0.0",
     "typescript": "~5.9.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=16",
