--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "pnpm -r run clean",
     "demo:browser": "vite serve apps/demo-browser --port 3000",
     "install-deps": "pnpm install",
-    "test": "vitest"
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
