--- a/docs/request-lib-docs/package.json
+++ b/docs/request-lib-docs/package.json
@@ -7,7 +7,12 @@
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
   },
+  "dependencies": {
+    "@vitepress-demo-preview/component": "^2.5.1",
+    "@vitepress-demo-preview/plugin": "^1.4.0",
+    "request-bus": "workspace:*"
+  },
   "devDependencies": {
-    "vitepress": "2.0.0-alpha.12"
+    "vitepress": "2.0.0-alpha.1"
   }
 }
