--- a/docs/request-lib-docs/package.json
+++ b/docs/request-lib-docs/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@vitepress-demo-preview/component": "^2.5.1",
     "@vitepress-demo-preview/plugin": "^1.4.0",
-    "request-api": "workspace:*"
+    "request-api": "workspace:*",
+    "request-imp-axios": "workspace:*",
+    "request-imp-fetch": "workspace:*"
   },
   "devDependencies": {
     "vitepress": "2.0.0-alpha.1"
