--- a/packages/request-api/tsconfig.json
+++ b/packages/request-api/tsconfig.json
@@ -4,10 +4,11 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "composite": true,
-    "declarationMap": false
+    "declaration": true,
+    "declarationMap": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "**/__test__/**", "**/*.test.ts", "**/*.spec.ts"],
   "references": [
     {
       "path": "../request-core"
