--- a/packages/request-api/package.json
+++ b/packages/request-api/package.json
@@ -26,14 +26,14 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --moduleResolution node --outDir dist/cjs",
     "dev": "tsc --watch",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist tsconfig.tsbuildinfo"
   },
   "dependencies": {
     "request-core": "workspace:*"
   },
   "devDependencies": {
     "typescript": "~5.9.2",
-    "rimraf": "^5.0.0"
+    "rimraf": "^6.0.1"
   },
   "keywords": [
     "request",
