--- a/packages/request-core/package.json
+++ b/packages/request-core/package.json
@@ -26,10 +26,10 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --moduleResolution node --outDir dist/cjs",
     "dev": "tsc --watch",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist tsconfig.tsbuildinfo"
   },
   "devDependencies": {
-    "rimraf": "^5.0.0",
+    "rimraf": "^6.0.1",
     "typescript": "~5.9.2"
   },
   "keywords": [
