--- a/packages/request-core/tsconfig.json
+++ b/packages/request-core/tsconfig.json
@@ -3,8 +3,10 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "composite": true
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/__test__/**", "**/*.test.ts", "**/*.spec.ts"]
 }
