--- a/packages/request-imp-axios/package.json
+++ b/packages/request-imp-axios/package.json
@@ -26,7 +26,7 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --moduleResolution node --outDir dist/cjs",
     "dev": "tsc --watch",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist tsconfig.tsbuildinfo"
   },
   "dependencies": {
     "axios": "^1.6.0",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "typescript": "~5.9.2",
-    "rimraf": "^5.0.0"
+    "rimraf": "^6.0.1"
   },
   "keywords": [
     "axios",
