--- a/packages/request-imp-fetch/package.json
+++ b/packages/request-imp-fetch/package.json
@@ -24,16 +24,16 @@
   "scripts": {
     "build": "tsc && tsc --module commonjs --moduleResolution node --outDir dist/cjs",
     "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --moduleResolution node --outDir dist/cjs",
+    "build:cjs": "tsc --module commonjs --moduleResolution node --outDir dist/cjs", 
     "dev": "tsc --watch",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist tsconfig.tsbuildinfo"
   },
   "dependencies": {
     "request-core": "workspace:*"
   },
   "devDependencies": {
     "typescript": "~5.9.2",
-    "rimraf": "^5.0.0"
+    "rimraf": "^6.0.1"
   },
   "keywords": [
     "fetch",
