build: 更新依赖并添加GitHub Pages部署工作流
- 添加@css-render/vue3-ssr依赖以支持SSR样式处理
- 指定pnpm版本为8.15.3
- 添加GitHub Actions工作流用于自动部署文档
- 配置VitePress主题以支持Naive UI和SSR样式收集

--- a/docs/request-lib-docs/package.json
+++ b/docs/request-lib-docs/package.json
@@ -18,6 +18,7 @@
     "vitepress-mermaid-renderer": "^1.0.15"
   },
   "devDependencies": {
+    "@css-render/vue3-ssr": "^0.15.14",
     "vitepress": "2.0.0-alpha.1"
   }
 }
