--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
         run: pnpm install
 
       - name: Build documentation with VitePress
-        run: pnpm run docs:build
+        run: pnpm docs:build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
