ci(workflow): 在构建文档前添加包构建步骤
添加 `pnpm run build:packages` 步骤以确保文档构建前依赖包已正确构建，同时修正 `pnpm docs:build` 为完整命令 `pnpm run docs:build`

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,8 +38,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Build packages
+        run: pnpm run build:packages
+
       - name: Build documentation with VitePress
-        run: pnpm docs:build
+        run: pnpm run docs:build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
