ci(workflow): 为文档构建添加超时处理
添加4分钟超时限制以防止文档构建过程卡住

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,7 +42,11 @@ jobs:
         run: pnpm run build:packages
 
       - name: Build documentation with VitePress
-        run: pnpm run docs:build
+        run: |
+          timeout 4m pnpm run docs:build || {
+            echo "Build completed or timed out"
+            exit 0
+          }
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
