--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Build documentation with VitePress
         run: |
-          timeout 4m pnpm run docs:build || {
+          timeout 2m pnpm run docs:build || {
             echo "Build completed or timed out"
             exit 0
           }
@@ -59,3 +59,8 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        
+      - name: Display deployment URL
+        run: |
+          echo "Documentation deployed at: ${{ steps.deployment.outputs.page_url }}"
+          echo "Note: Make sure your GitHub Pages settings are configured to deploy from the 'gh-pages' branch"
